--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-It works!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+</head>
+<body>
+  <h1>It works!</h1>
+</body>
+</html>
