--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -13,7 +13,7 @@
     <a href="https://www.jd.com/" target="_blank">在新窗口打开京东</a>
     <a href="mailto:xieranmaya@qq.com">点击给我发邮件</a> 
     <a href="#footer">跳转到本页的底部</a> 
-    <a href="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b" download>点我可以下载一个文件</a> 
+    <a href="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b" download="images/stock-photo-229389427.jpg">点我可以下载一个文件</a>
   </div>
   <img width=200 height=200 src="https://drscdn.500px.org/photo/229389427/m%3D1170/v2?user_id=7012987&webp=true&sig=196fa0c161aa562478d08571764872f7d69a346c3c0b2e12aa00e2c6414eb28b" alt="图片描述" />
   <marquee behavior="alternate" direction="right">飘~~~</marquee>
@@ -69,7 +69,7 @@
   <hr />
 
   <h2>Google搜索</h2>
-  <form action="https://www.google.com/search" target="_blank">
+  <form action="https://www.google.com/search" target="_blank" required>
   <input type="text" placeholder="请输入想要搜索的内容" name="q" />
     <button>在新窗口打开搜索结果</button>
   </form>
@@ -178,9 +178,9 @@
     <area shape="poly" coords="70,300,100,100,150,150" href="" alt="123">
   </map>
   <hr />
-  <div><a href="https://www.mi.com/" target="mi">点击我会在下面的frame里打开小米商场，但为什么打不开呢？</a></div>
+  <div><a href="https://nodejs.org" target="mi">点击我会在下面的frame里打开小米商场，但为什么打不开呢？</a></div>
   <p>Refused to display 'https://www.mi.com/' in a frame because it set 'X-Frame-Options' to 'sameorigin'.</p>
-  <iframe src="https://nodejs.org" name="mi" frameborder="1"></iframe>
+  <iframe src="https://www.baidu.com/" name="mi" frameborder="1"></iframe>
   <p>怎样&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在这两个字之间空这么大呢？ 
 怎样在页面中显示下面的内容呢？</p>
   <p id="footer">&lt;span>&lt;/span></p>
