--- a/miao/block-layout-practise.html
+++ b/miao/block-layout-practise.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>block-layout-practise</title>
   <style>
+    ul{
+      list-style: none;
+      padding: 0;
+    }
     header{
       background: #000;
     }
@@ -16,10 +20,35 @@
     }
     main section:nth-child(2) li{
       box-sizing: border-box;
+      margin: 15px 0;
       width: 180px;
       height: 40px;
-      border: 3px solid #000;
-      margin: 0 15px;
+      line-height: 2;
+      background: pink;
+      border: 3px solid;
+    }
+    main section:nth-child(2) li:hover{
+      background: red;
+    }
+    main section:nth-child(2) li:nth-of-type(n+5):nth-of-type(-n+8){
+      margin-left: 210px;
+    }
+    main section:nth-child(2) li:nth-of-type(n+8){
+      margin-left: 420px;
+    }
+    main section:nth-child(2) li:nth-of-type(5),main section:nth-child(2) li:nth-of-type(9){
+      margin-top: -220px;
+    }
+    main section:nth-child(3) ul{
+      overflow: hidden;
+    }
+    main section:nth-child(3) li{
+      margin-bottom: -1px;
+      border-bottom: 1px dotted;
+    }
+    footer{
+      background: violet;
+      text-align: center;
     }
   </style>
 </head>
@@ -29,7 +58,9 @@
   </header>
   <main>
     <section>
+      <p>
       页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px 页面主体 宽度600px
+      </p>
     </section>
     <section>
       <ul>
@@ -49,11 +80,11 @@
     </section>
     <section>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>link</li>
+        <li>link</li>
+        <li>link</li>
+        <li>link</li>
+        <li>link</li>
       </ul>
     </section>
   </main>
