--- a/miao/qq-mail.html
+++ b/miao/qq-mail.html
@@ -7,23 +7,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>qq-mail</title>
   <style>
-    body>*{
-      border: 2px solid;
-      height: 100px;
+    html,body{
+      width: 100%;
+      height: 100%;
     }
-    .left{
-      width:220px;
+    body{
+      margin: 0;
+    }
+    body>*{
+      box-sizing: border-box;
+      border: 2px solid;
+    }
+    header{
+      height: 100px;
+      background-color: pink;
+    }
+    aside{
+      width: 200px;
+      height: calc(100% - 100px);
+      background-color: aqua;
       margin-top: -2px;
     }
-    .right{
-      margin-left: 222px;
-      margin-top: -104px;
+    main{
+      height: calc(100% - 100px);
+      margin-left: 198px;
+      margin-top: calc(-100vh + 100px);
+      background-color: violet;
     }
   </style>
 </head>
 <body>
-  <div></div>
-  <div class="left"></div>
-  <div class="right"></div>
+  <header>header</header>
+  <aside>aside</aside>
+  <main>main</main>
 </body>
 </html>
