--- a/miao/qq-mail.html
+++ b/miao/qq-mail.html
@@ -16,21 +16,21 @@
     }
     body>*{
       box-sizing: border-box;
-      border: 2px solid;
     }
     header{
       height: 100px;
       background-color: pink;
+      border-bottom: 2px solid;
     }
     aside{
       width: 200px;
-      height: calc(100% - 100px);
+      height: calc(100vh - 100px);
+      border-right: 2px solid;
       background-color: aqua;
-      margin-top: -2px;
     }
     main{
-      height: calc(100% - 100px);
-      margin-left: 198px;
+      height: calc(100vh - 100px);
+      margin-left: 200px;
       margin-top: calc(-100vh + 100px);
       background-color: violet;
     }
