--- a/miao/qq-mail.html
+++ b/miao/qq-mail.html
@@ -11,11 +11,16 @@
       width: 100%;
       height: 100%;
     }
+    html{
+      box-sizing: border-box;
+    }
     body{
       margin: 0;
+      font-size: 0;
     }
-    body>*{
-      box-sizing: border-box;
+    *{
+      box-sizing: inherit;
+      font-size: initial;
     }
     header{
       height: 100px;
@@ -23,15 +28,16 @@
       border-bottom: 2px solid;
     }
     aside{
+      display: inline-block;
       width: 200px;
       height: calc(100vh - 100px);
       border-right: 2px solid;
       background-color: aqua;
     }
     main{
+      display: inline-block;
+      width: calc(100% - 200px);
       height: calc(100vh - 100px);
-      margin-left: 200px;
-      margin-top: calc(-100vh + 100px);
       background-color: violet;
     }
   </style>
