--- a/miao/background-practise.html
+++ b/miao/background-practise.html
@@ -27,70 +27,151 @@
     .icon:hover {
       background-position: 3px center, 58px center;
     }
-    body{
-      height: 100vh;
-      margin-bottom: 200px;
+    .glassy{
       background-image: url(images/initial.jpg);
       background-repeat: no-repeat;
       background-position: left 55px;
       background-attachment: fixed;
     }
-    .glassy{
-      margin-left: 100px;
-      margin-top: 100px;
-      margin-bottom: 200px;
+    .glassy div{
+      margin: 100px;
+      font-size: 40px;
       background-image: url(images/glassy.jpg);
       background-repeat: no-repeat;
       background-position: 0px 55px;
       background-attachment: fixed;
     }
-    li {
+    .car li {
       list-style: none;
       box-sizing: border-box;
       height: calc(100vh - 55px);
       border: 1px solid #000;
-      margin-left: 400px;
       background-repeat: no-repeat;
-      background-position: calc(100vw - 600px) 255px;
+      background-position: center;
       background-attachment: fixed;
-      background-size: 400px;
     }
-    li:nth-child(1) {
+    .car li:nth-child(1) {
       background-image: url(images/porsche-model1.png);
     }
-    li:nth-child(2) {
+    .car li:nth-child(2) {
       background-image: url(images/porsche-model2.png);
     }
-    li:nth-child(3) {
+    .car li:nth-child(3) {
       background-image: url(images/porsche-model3.png);
+    }
+
+    .sprite li{
+      display: inline-block;
+      margin-right: 10px;
+      margin-bottom: 10px;
+      background-image: url(https://www.google.com.hk/images/nav_logo242_hr.png);
+      background-repeat: no-repeat;
+      background-color: #ccc;
+      /*width: 100px;*/
+      /*height: 100px;*/
+    }
+    .row:nth-of-type(1) li{
+      height: 74px;
+      background-position-y: top;
+    }
+    .row:nth-of-type(1) li:nth-child(1) {
+      width: 16px;
+      height: 26px;
+      background-position: left -16px;
+    }
+    .row:nth-of-type(1) li:nth-child(2) {
+      width: 230px;
+      background-position: -48px top;
+    }
+    .row:nth-of-type(1) li:nth-child(3) {
+      width: 16px;
+      height: 26px;
+      background-position: -318px -17px;
+    }
+
+    .row:nth-of-type(2) li {
+      height: 70px;
+      background-position-y: -80px;
+    }
+    .row:nth-of-type(2) li:nth-child(1) {
+      width: 192px;
+      background-position-x: 4px;
+    }
+    .row:nth-of-type(2) li:nth-child(2) {
+      width: 20px;
+      height: 30px;
+      background-position-x: -190px;
+    }
+    .row:nth-of-type(2) li:nth-child(3) {
+      width: 26px;
+      height: 26px;
+      background-position-x: -229px;
+    }
+    .row:nth-of-type(2) li:nth-child(4) {
+      width: 36px;
+      height: 36px;
+      background-position: -220px -115px;
+    }
+
+    .row:nth-of-type(3) li:nth-child(1) {
+      width: 56px;
+      height: 20px;
+      background-position: 0 -157px;
+    }
+    .row:nth-of-type(3) li:nth-child(2) {
+      width: 26px;
+      height: 36px;
+      background-position: 0 -176px;
+    }
+    .row:nth-of-type(3) li:nth-child(3) {
+      width: 26px;
+      height: 36px;
+      background-position: -28px -176px;
+    }
+    .row:nth-of-type(3) li:nth-child(4) {
+      width: 26px;
+      height: 26px;
+      background-position: 0 -210px;
+    }
+    .row:nth-of-type(3) li:nth-child(5) {
+      width: 150px;
+      height: 54px;
+      background-position: -58px -158px;
     }
   </style>
 </head>
 <body>
-  <div class="icon"></div>
-  <div class="glassy">
+  <section class="icon"></section>
+  <section class="car">
     <ul>
       <li></li>
       <li></li>
       <li></li>
     </ul>
-  </div>
-  <div class="car">
-
-  </div>
-  <!--<section class="icon">-->
-    <!--<div></div>-->
-  <!--</section>-->
-  <!--<section class="car">-->
-    <!--<ul>-->
-      <!--<li></li>-->
-      <!--<li></li>-->
-      <!--<li></li>-->
-    <!--</ul>-->
-  <!--</section>-->
-  <!--<section class="glassy-initial">-->
-    <!--<div></div>-->
-  <!--</section>-->
-
+  </section>
+  <section class="glassy">
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa debitis deleniti dolor ea eius error expedita hic id impedit inventore iste laboriosam laborum libero minus odio officiis, possimus quam quas reiciendis rem sapiente tempora tenetur voluptatum! Aliquid animi at commodi non officiis quibusdam quod tempore tenetur velit, voluptate. Aut cupiditate eligendi, ex libero minima minus molestias nemo optio quidem quisquam, recusandae tempore ut! A accusamus aliquam animi architecto commodi consectetur cupiditate deserunt distinctio dolore dolorem ducimus eaque eius enim ipsa ipsam itaque iusto, minima neque officia omnis optio quam quas quia quisquam quo ratione repudiandae saepe sit ut veniam, voluptate?</div>
+  </section>
+  <section class="sprite">
+    <div id="abs"></div>
+    <ul class="row">
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <ul class="row">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+    <ul class="row">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </section>
 </body>
 </html>
