--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="iconfont/iconfont.css">
-  <!-- <link rel="stylesheet" href="css/index.css"> -->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <link type="text/scss" rel="stylesheet" href="sass/index.scss">
 </head>
@@ -581,7 +579,7 @@
       </div>
       <div class="goods-content">
         <div class="title center">
-          <a class="all fr" href="#">查看全部<i class="iconfont icon-youjiantou"></i></a>
+          <a class="all fr hover-c-mi" href="#">查看全部<i class="iconfont icon-youjiantou"></i></a>
           <h2>手机</h2>
         </div>
         <ul class="goods-list clearfix center">
@@ -876,7 +874,7 @@
     <section class="goods-box goods-spread video">
       <div class="goods-content">
         <div class="title center">
-          <a class="all fr" href="#">查看全部<i class="iconfont icon-youjiantou"></i></a>
+          <a class="all fr hover-c-mi" href="#">查看全部<i class="iconfont icon-youjiantou"></i></a>
           <h2>视频</h2>
         </div>
         <div class="center">
