--- a/miao/abs-center.html
+++ b/miao/abs-center.html
@@ -9,17 +9,37 @@
   <style>
     body{
       margin: 0;
-      text-align: center;
+      /*text-align: center;*/
     }
+    /*div{*/
+      /*display: inline;*/
+      /*padding: 100px;*/
+      /*line-height: 100vh;*/
+      /*background-color: pink;*/
+    /*}*/
     div{
-      display: inline;
-      padding: 100px;
-      line-height: 100vh;
+      width: 300px;
+      height: 400px;
       background-color: pink;
+    }
+    .s1 {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+    }
+
+    .s2 {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   </style>
 </head>
 <body>
-  <div></div>
+  <div class="s3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, sunt!</div>
 </body>
 </html>
