--- a/miao/bootstrap-table.html
+++ b/miao/bootstrap-table.html
@@ -28,7 +28,7 @@
       width: 1px;
       padding: 0 10px;
       text-align: center;
-      white-space: nowrap;
+      white-space: nowrap;  
     }
 
     .responsive input {
@@ -57,8 +57,10 @@
       border: 1px solid;
       border-collapse: collapse;
     }
+    th{
+      border-bottom: 2px solid;
+    }
     /*table-hover*/
-
     .table table tbody tr:hover{
       background-color: #aaa;
     }
@@ -73,6 +75,22 @@
       overflow: auto;
     }
 
+    /* table-responsive */
+    .table-responsive td{
+      position: relative;
+    }
+    .table-responsive  td:hover::after{
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      z-index: -1;
+      height: 999px;
+      background-color: pink;
+    }
   </style>
 </head>
 <body>
@@ -164,6 +182,42 @@
         <td>cell</td>
         <td>cell</td>
       </tr>
+    </tbody>
+  </table>
+</section>
+<section class="table-responsive">
+  <table>
+    <thead>
+    <tr>
+      <th>#</th>
+      <th>Heading</th>
+      <th>Heading</th>
+      <th>Heading</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+    </tr>
+    <tr>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+    </tr><tr>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+    </tr><tr>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+      <td>cell</td>
+    </tr>
     </tbody>
   </table>
 </section>
