--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="iconfont/iconfont.css">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
   <link type="text/scss" rel="stylesheet" href="sass/index.scss">
 </head>
 <body>
@@ -1071,6 +1072,59 @@
       <div class="slogan"></div>
     </section>
   </footer>
+  <section class="right-bar">
+    <ul>
+      <li class="right-bar-item qrcode">
+        <a href="#">
+          <div>
+            <img class="inactive" src="https://i8.mifile.cn/b2c-mimall-media/cc0b8948a88a08f6f3b7cd826e09ace6.png" alt="">
+            <img class="active" src="https://i8.mifile.cn/b2c-mimall-media/1012b08b8f0268aab455c56027109a34.png" alt="">
+          </div>
+          <div class="des qrcode-des">
+            <img src="https://i8.mifile.cn/b2c-mimall-media/2ecd36165b6c2a820a0488fa7a2c4942.png" alt="">
+            <p>微信扫一扫</p>
+            <p>一分钱拼团</p>
+          </div>
+        </a>
+      </li>
+      <li class="right-bar-item user">
+        <a href="#">
+          <div>
+            <img class="inactive" src="https://i8.mifile.cn/b2c-mimall-media/55cad219421bee03a801775e7309b920.png" alt="">
+            <img class="active" src="https://i8.mifile.cn/b2c-mimall-media/41f858550f42eb1770b97faf219ae215.png" alt="">
+          </div>
+          <div class="des">个人中心</div>
+        </a>
+      </li>
+      <li class="right-bar-item service">
+        <a href="#">
+          <div>
+            <img class="inactive" src="https://i8.mifile.cn/b2c-mimall-media/4f036ae4d45002b2a6fb6756cedebf02.png" alt="">
+            <img class="active" src="https://i8.mifile.cn/b2c-mimall-media/5e9f2b1b0da09ac3b3961378284ef2d4.png" alt="">
+          </div>
+          <div class="des">联系客服</div>
+        </a>
+      </li>
+      <li class="right-bar-item cart">
+        <a href="#">
+          <div>
+            <img class="inactive" src="https://i8.mifile.cn/b2c-mimall-media/d7db56d1d850113f016c95e289e36efa.png" alt="">
+            <img class="active" src="https://i8.mifile.cn/b2c-mimall-media/692a6c3b0a93a24f74a29c0f9d68ec71.png" alt="">
+          </div>
+          <div class="des">购物车(<span class="cart-num">3</span>)</div>
+        </a>
+      </li>
+    </ul>
+    <div class="right-bar-item to-top">
+      <a href="#">
+        <div>
+          <img class="inactive" src="https://i1.mifile.cn/f/i/2018/home/totop.png" alt="">
+          <img class="active" src="https://i1.mifile.cn/f/i/2018/home/totop_hover.png" alt="">
+        </div>
+        <div class="des">回顶部</div>
+      </a>
+    </div>
+  </section>
 </body>
 <script src="sass/sass.link.min.js"></script>
 </html>
