--- a/miao/mi/index.html
+++ b/miao/mi/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="iconfont/iconfont.css">
-  <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />-->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">-->
   <link type="text/scss" rel="stylesheet" href="sass/index.scss">
 </head>
 <body>
@@ -116,7 +116,7 @@
         <div class="search fr">
           <form action="">
             <div class="clearfix">
-              <input type="text" name="keyword" class="search-box" />
+              <input type="text" name="keyword" autocomlpete="off" class="search-box" />
               <i class="iconfont icon-sousuo"></i>
               <div class="words">
                 <a href="#">电视新品</a>
@@ -125,7 +125,7 @@
               <div class="search-drop-down">
                 <ul>
                   <li>
-                    <a class="goods-link" href="#">
+                    <a class="goods-link" href="https://www.mi.com/">
                       <span class="goods-name fl">小米6X</span>
                       <span class="goods-stock fr">约有<span class="goods-stock-num">6</span>件</span>
                     </a>
@@ -814,14 +814,42 @@
           <ul class="goods-list clearfix">
             <li class="hover-shadow">
               <h2>图书</h2>
-              <div class="title"><a href="#">哈利波特与被诅咒的孩子</a></div>
-              <p class="des"><a href="#">哈利·波特"第八个故事中文版震撼来袭！特别彩排版剧本！</a></p>
-              <div class="price"><a href="#">29.37元</a></div>
-              <div class="pic">
-                <a href="#"><img src="//i1.mifile.cn/a4/5e5da924-84e3-4959-9e25-5891cdf30757" alt="" /></a>
-              </div>
+              <ul>
+                <li>
+                  <div class="title"><a href="#">哈利波特与被诅咒的孩子</a></div>
+                  <p class="des"><a href="#">哈利·波特"第八个故事中文版震撼来袭！特别彩排版剧本！</a></p>
+                  <div class="price"><a href="#">29.37元</a></div>
+                  <div class="pic">
+                    <a href="#"><img src="//i1.mifile.cn/a4/5e5da924-84e3-4959-9e25-5891cdf30757" alt="" /></a>
+                  </div>
+                </li>
+                <li>
+                  <div class="title"><a href="#">剑侠世界2</a></div>
+                  <p class="des"><a href="#">潮流武侠，炫动江湖</a></p>
+                  <div class="price"><a href="#">29.37元</a></div>
+                  <div class="pic">
+                    <a href="#"><img src="//i1.mifile.cn/a4/xmad_15175523589542_niohb.png" alt="" /></a>
+                  </div>
+                </li>
+                <li>
+                  <div class="title"><a href="#">好吗好的</a></div>
+                  <p class="des"><a href="#">畅销作家大冰2016年新书，讲给你听，好吗好的</a></p>
+                  <div class="price"><a href="#">17.99元</a></div>
+                  <div class="pic">
+                    <a href="#"><img src="https://i1.mifile.cn/a4/61e1385e-54de-48f3-8717-5e4f4b1cdd14" alt="" /></a>
+                  </div>
+                </li>
+                <li>
+                  <p class="des"><a href="#">海量好书，享受精品阅读时光漂亮的中文排版，千万读者选择！</a></p>
+
+                  <div class="pic">
+                    <a href="#"><img src="//s01.mifile.cn/i/index/more-duokan.jpg" alt="" /></a>
+                  </div>
+                </li>
+              </ul>
               <div class="pages">
                 <span class="active"></span>
+                <span></span>
                 <span></span>
                 <span></span>
               </div>
@@ -838,19 +866,6 @@
                 <span class="active"></span>
                 <span></span>
                 <span></span>
-              </div>
-            </li>
-            <li class="hover-shadow">
-              <h2>图书</h2>
-              <div class="title"><a href="#">哈利波特与被诅咒的孩子</a></div>
-              <p class="des"><a href="#">哈利·波特"第八个故事中文版震撼来袭！特别彩排版剧本！</a></p>
-              <div class="price"><a href="#">29.37元</a></div>
-              <div class="pic">
-                <a href="#"><img src="//i1.mifile.cn/a4/5e5da924-84e3-4959-9e25-5891cdf30757" alt="" /></a>
-              </div>
-              <div class="pages">
-                <span class="active"></span>
-                <span></span>
                 <span></span>
               </div>
             </li>
@@ -866,8 +881,25 @@
                 <span class="active"></span>
                 <span></span>
                 <span></span>
+                <span></span>
               </div>
             </li>
+            <li class="hover-shadow">
+              <h2>图书</h2>
+              <div class="title"><a href="#">哈利波特与被诅咒的孩子</a></div>
+              <p class="des"><a href="#">哈利·波特"第八个故事中文版震撼来袭！特别彩排版剧本！</a></p>
+              <div class="price"><a href="#">29.37元</a></div>
+              <div class="pic">
+                <a href="#"><img src="//i1.mifile.cn/a4/5e5da924-84e3-4959-9e25-5891cdf30757" alt="" /></a>
+              </div>
+              <div class="pages">
+                <span class="active"></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </li>
+
           </ul>
         </div>
       </div>
