--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,6 +1,5 @@
 <meta charset="utf-8">
-<script type="x" id="ch0103/01">
-  console.log('%c01:A+B问题', 'color: red')
+<script xtype="x" id="ch0103/01">
   // 01:A+B问题
   var A = Number(prompt('输入A'))
   while (A % 1!== 0) {
@@ -14,8 +13,7 @@
   }
   console.log(A + B)
 </script>
-<script type="x" id="ch0103/02">
-  console.log('%c02:计算(a+b)*c的值', 'color: red')
+<script xtype="x" id="ch0103/02">
   // 02:计算(a+b)*c的值
   var sum = 0
   for(var i = 0; i < 3; i++) {
@@ -32,8 +30,7 @@
   } 
   console.log(sum)
 </script>
-<script type="x" id="ch0103/03">
-  console.log('%c03:计算(a+b)/c的值', 'color: red')
+<script xtype="x" id="ch0103/03">
   // 03:计算(a+b)/c的值
   var sum = 0
   for(var i = 0; i < 3; i++) {
@@ -50,8 +47,7 @@
   } 
   console.log(sum)
 </script>
-<script type="x" id="ch0103/04">
-  console.log('%c04:带余除法', 'color: red')
+<script xtype="x" id="ch0103/04">
   // 04:带余除法
   var quotient = 0
   var a = Number(prompt('输入a '))
@@ -67,8 +63,7 @@
   quotient = Math.floor(a / b)
   console.log(quotient+ ' ' + (a - quotient * b))
 </script>
-<script type="x" id="ch0103/05">
-  console.log('%c05:计算分数的浮点数值', 'color: red')
+<script xtype="x" id="ch0103/05">
   // 05:计算分数的浮点数值
   var a = Number(prompt('输入a '))
   while (!a) {
@@ -82,8 +77,7 @@
   } 
   console.log((a / b).toFixed(9))
 </script>
-<script type="x" id="ch0103/06">
-  console.log('%c06:甲流疫情死亡率', 'color: red')
+<script xtype="x" id="ch0103/06">
   // 06:甲流疫情死亡率
   var a = Number(prompt('输入确诊数 '))
   while (a === 0) {
@@ -97,8 +91,7 @@
   } 
   console.log((b / a * 100).toFixed(3) + '%')
 </script>
-<script type="x" id="ch0103/07">
-  console.log('%c07:计算多项式的值', 'color: red')
+<script xtype="x" id="ch0103/07">
   // 07:计算多项式的值
   var f = 0
   var x = 0
@@ -133,8 +126,7 @@
   }
   console.log(f.toFixed(7))
 </script>
-<script type="x" id="ch0103/08">
-  console.log('%c08:温度表达转化', 'color: red')
+<script xtype="x" id="ch0103/08">
   // 08:温度表达转化
   var c = 0
   var f = Number(prompt('输入华氏温度 '))
@@ -145,8 +137,7 @@
   c = 5 * (f - 32) / 9
   console.log(c.toFixed(5))
 </script>
-<script type="x" id="ch0103/09">
-  console.log('%c09:与圆相关的计算', 'color: red')
+<script xtype="x" id="ch0103/09">
   // 09:与圆相关的计算
   var diameter = 0
   var perimeter = 0
@@ -161,8 +152,7 @@
   area = Math.PI * r * r
   console.log(diameter.toFixed(4) + ' ' + perimeter.toFixed(4) + ' ' + area.toFixed(4))
 </script>
-<script type="x" id="ch0103/10">
-  console.log('%c10:计算并联电阻的阻值', 'color: red')
+<script xtype="x" id="ch0103/10">
   // 10:计算并联电阻的阻值
   var r = 0
   var r1 = Number(prompt('输入电阻r1 '))
@@ -178,8 +168,7 @@
   r = (r1 * r2) / (r1 + r2)
   console.log(r.toFixed(2))
 </script>
-<script type="x" id="ch0103/11">
-  console.log('%c11:计算浮点数相除的余数', 'color: red')
+<script xtype="x" id="ch0103/11">
   // 11:计算浮点数相除的余数（双精度）
   var remainder = 0
   var a = Number(prompt('输入浮点数a '))
@@ -195,8 +184,7 @@
   var remainder = a - Math.floor(a / b) * b
   console.log(remainder.toFixed(4))
 </script>
-<script type="x" id="ch0103/12">
-  console.log('%c12:计算球的体积', 'color: red')
+<script xtype="x" id="ch0103/12">
   // 12:计算球的体积（双精度）
   var V = 0
   var r = Number(prompt('输入球的半径r '))
@@ -207,8 +195,7 @@
   V = 4 / 3 * 3.14 * r * r * r
   console.log(V.toFixed(2))
 </script>
-<script type="x" id="ch0103/13">
-  console.log('%c13:反向输出一个三位数', 'color: red')
+<script xtype="x" id="ch0103/13">
   // 13:反向输出一个三位数
   var digit = 0
   var ten = 0
@@ -229,8 +216,7 @@
     console.log(reverse)
   }
 </script>
-<script type="x" id="ch0103/14">
-  console.log('%c14:大象喝水', 'color: red')
+<script xtype="x" id="ch0103/14">
   // 14:大象喝水
   var num = 0
   var h = Number(prompt('输入桶的深度h'))
@@ -246,8 +232,7 @@
   num = Math.ceil(20000 / (3.14159 * r * r * h))
   console.log(num)
 </script>
-<script type="x" id="ch0103/15">
-  console.log('%c15:苹果和虫子', 'color: red')
+<script xtype="x" id="ch0103/15">
   // 15:苹果和虫子
   var num = 0
   var n = Number(prompt('输入苹果的个数n '))
@@ -268,8 +253,7 @@
   var num = n - Math.ceil(y / x)
   console.log(num)
 </script>
-<script type="x" id="ch0103/16">
-  console.log('%c16:计算线段长度', 'color: red')
+<script xtype="x" id="ch0103/16">
   // 16:计算线段长度
   var length = 0
   var x_minues = 0
@@ -297,8 +281,7 @@
   length = Math.sqrt((Xb - Xa) * (Xb - Xa) + (Yb - Ya) * (Yb - Ya))
   console.log(length.toFixed(3))
 </script>
-<script type="x" id="ch0103/17">
-  console.log('%c17:计算三角形面积', 'color: red')
+<script xtype="x" id="ch0103/17">
   // 17:计算三角形面积
   var a = 0
   var b = 0
@@ -345,8 +328,7 @@
   area = Math.sqrt(s * (s - a) * (s - b) * (s - c))
   console.log(area.toFixed(2))
 </script>
-<script type="x" id="ch0103/18">
-  console.log('%c18:等差数列末项计算', 'color: red')
+<script xtype="x" id="ch0103/18">
   // 18:等差数列末项计算
   var sum = 0
   var a1 = Number(prompt('输入整数a1 '))
@@ -367,8 +349,7 @@
   sum = a1 + (n - 1) * (a2 - a1)
   console.log(sum)
 </script>
-<script type="x" id="ch0103/19">
-  console.log('%c19:A*B问题', 'color: red')
+<script xtype="x" id="ch0103/19">
   // 19:A*B问题
   var multiply = 1
   //var A = Number(prompt('输入整数A '))
@@ -382,8 +363,7 @@
   }
   console.log(multiply)
 </script>
-<script type="x" id="ch0103/20">
-  console.log('%c20:计算2的幂%c', 'color: red')
+<script xtype="x" id="ch0103/20">
   // 20:计算2的幂
   var square = 1
   var n = Number(prompt('输入整数n '))
@@ -396,8 +376,7 @@
   }
   console.log(square)
 </script>
-<script type="x" id="ch0104/01">
-  console.log('%c01:判断数正负', 'color: red')
+<script xtype="x" id="ch0104/01">
   // 01:判断数正负
   var N = Number(prompt('输入整数N '))
   while (N % 1!== 0) {
@@ -412,8 +391,7 @@
     console.log('zero')
   }
 </script>
-<script type="x" id="ch0104/02">
-  console.log('%c02:输出绝对值', 'color: red')
+<script xtype="x" id="ch0104/02">
   // 02:输出绝对值
   var n = Number(prompt('输入浮点数n '))
   while (n % 1 === 0) {
@@ -422,8 +400,7 @@
   }
   console.log(Math.abs(n));
 </script>
-<script type="x" id="ch0104/03">
-  console.log('%c03:奇偶数判断', 'color: red')
+<script xtype="x" id="ch0104/03">
   // 03:奇偶数判断
   var n = Number(prompt('输入数字n '))
   while (n <= 0 || n % 1 !== 0) {
@@ -436,8 +413,7 @@
     console.log('odd')
   }
 </script>
-<script type="x" id="ch0104/04">
-  console.log('%c04:奇偶ASCII值判断', 'color: red')
+<script xtype="x" id="ch0104/04">
   // 04:奇偶ASCII值判断
   var char = prompt('输入字符char')
   while (char.length !== 1 || !char) {
@@ -446,8 +422,7 @@
   }
   console.log(char.charCodeAt())
 </script>
-<script type="x" id="ch0104/05">
-  console.log('%c05:整数大小比较', 'color: red')
+<script xtype="x" id="ch0104/05">
   // 05:整数大小比较
   var x = Number(prompt('输入数字x '))
   while (x < 0 || x >= 2 ** 32 || x % 1 !== 0) {
@@ -467,8 +442,7 @@
     console.log('<')
   }
 </script>
-<script type="x" id="ch0104/06">
-  console.log('%c06:判断是否为两位数', 'color: red')
+<script xtype="x" id="ch0104/06">
   // 06:判断是否为两位数
   var n = Number(prompt('输入数字n '))
   while (n < 0 || n % 1 !== 0 || n > 1000) {
@@ -481,8 +455,7 @@
     console.log(0)
   }
 </script>
-<script type="x" id="ch0104/07">
-  console.log('%c07:收集瓶盖赢大奖', 'color: red')
+<script xtype="x" id="ch0104/07">
   // 07:收集瓶盖赢大奖
   var sum = 0
   var n = Number(prompt('输入数字n '))
@@ -498,8 +471,7 @@
   sum = Math.floor(n / 10) + Math.floor(m / 20)
   console.log(sum)
 </script>
-<script type="x" id="ch0104/08">
-  console.log('%c08:判断一个数能否同时被3和5整除', 'color: red')
+<script xtype="x" id="ch0104/08">
   // 08:判断一个数能否同时被3和5整除
   var n = Number(prompt('输入数字n '))
   while (n <= -1000000 || n >= 1000000 || n % 1 !== 0) {
@@ -512,8 +484,7 @@
     console.log('NO')
   }
 </script>
-<script type="x" id="ch0104/09">
-  console.log('%c09:判断能否被3，5，7整除', 'color: red')
+<script xtype="x" id="ch0104/09">
   // 09:判断能否被3，5，7整除
   var str = ''
   var n = Number(prompt('输入数字n '))
@@ -534,8 +505,7 @@
   fn(n, 7)
   console.log(str)
 </script>
-<script type="x" id="ch0104/10">
-  console.log('%c10:有一门课不及格的学生', 'color: red')
+<script xtype="x" id="ch0104/10">
   // 10:有一门课不及格的学生
   var n = Number(prompt('输入语文成绩n '))
   while (n < 0 || n > 100 || n % 1 !== 0) {
@@ -557,8 +527,7 @@
     console.log(0)
   }
 </script>
-<script type="x" id="ch0104/11">
-  console.log('%c11:晶晶赴约会', 'color: red')
+<script xtype="x" id="ch0104/11">
   // 11:晶晶赴约会
   var n = Number(prompt('输入日期n '))
   while (n < 1 || n > 7 || n % 1 !== 0) {
@@ -571,8 +540,7 @@
     console.log('NO')
   }
 </script>
-<script type="x" id="ch0104/12">
-  console.log('%c12:骑车与走路', 'color: red')
+<script xtype="x" id="ch0104/12">
   // 12:骑车与走路
   var walk = 0
   var bike = 0
@@ -591,8 +559,7 @@
     console.log('All')    
   }
 </script>
-<script type="x" id="ch0104/13">
-  console.log('%c13:分段函数', 'color: red')
+<script xtype="x" id="ch0104/13">
   // 13:分段函数
   var N = Number(prompt('输入浮点数N '))
   while (N < 0 || N >= 20) {
@@ -612,9 +579,8 @@
   }
   console.log((fn(N)).toFixed(3))
 </script>
-<script type="x" id="ch0104/14">
+<script xtype="x" id="ch0104/14">
   // debugger
-  console.log('%c14:计算邮资', 'color: red')
   // 14:计算邮资
   var fee = 8
   var n = Number(prompt('输入重量n '))
@@ -635,8 +601,7 @@
   }
   console.log(fee)
 </script>
-<script type="x" id="ch0104/15">
-  console.log('%c15:最大数输出', 'color: red')
+<script xtype="x" id="ch0104/15">
   // 15:最大数输出
   var max = -Infinity
   for (var i = 0; i < 3; i++) {
@@ -651,8 +616,7 @@
   }
   console.log(max)
 </script>
-<script type="x" id="ch0104/16">
-  console.log('%c16:三角形判断', 'color: red')
+<script xtype="x" id="ch0104/16">
   // 16:三角形判断
   var sum = 0
   var max = -Infinity
@@ -673,8 +637,7 @@
     console.log('no')
   }
 </script>
-<script type="x" id="ch0104/17">
-  console.log('%c17:判断闰年', 'color: red')
+<script xtype="x" id="ch0104/17">
   // 17:判断闰年
   var a = Number(prompt('输入年份a '))
   while (a <= 0 || a >= 3000 || a % 1 !== 0) {
@@ -691,8 +654,7 @@
     }
   }
 </script>
-<script type="x" id="ch0104/18">
-  console.log('%c18:点和正方形的关系', 'color: red')
+<script xtype="x" id="ch0104/18">
   // 18:点和正方形的关系
   var key = 'yes'
   for (var i = 0; i < 2; i++) {
@@ -709,8 +671,7 @@
   console.log(key)
     
 </script>
-<script type="x" id="ch0104/19">
-  console.log('%c19:简单计算器', 'color: red')
+<script xtype="x" id="ch0104/19">
   // 19:简单计算器
   var a = Number(prompt('输入a '))
   while (a % 1 !== 0) {
@@ -739,8 +700,7 @@
     console.log(a / b)
   }
 </script>
-<script type="x" id="ch0104/20">
-  console.log('%c20:求一元二次方程的根', 'color: red')
+<script xtype="x" id="ch0104/20">
   // 20:求一元二次方程的根
   var a = 0
   var b = 0
@@ -778,8 +738,7 @@
     console.log('x1=' + ((-b) / (2 * a)).toFixed(5) + '+' + (s_delta / (2 * a)).toFixed(5) + 'i, x2=' + ((-b) / (2 * a)).toFixed(5) + '-' + (s_delta / (2 * a)).toFixed(5) + 'i')
   }
 </script>
-<script type="x" id="ch0104/21">
-  console.log('%c21:苹果和虫子2', 'color: red')
+<script xtype="x" id="ch0104/21">
   // 21:苹果和虫子2
   var num = 0
   var n = Number(prompt('输入苹果的个数n '))
@@ -801,9 +760,8 @@
   num = num < 0 ? 0 : num
   console.log(num)
 </script>
-<script type="x" id="ch0105/01">
+<script xtype="x" id="ch0105/01">
   // 01：求平均年龄
-  console.log('%c01：求平均年龄', 'color: red')
   var sum_age = 0;  // 年龄之和
   var n = Number(prompt('输入学生个数:'))
   while (n < 1 || n > 100) {
@@ -820,9 +778,8 @@
   }
   console.log(sum_age / n).toFixed(2)
 </script>
-<script type="x" id="ch0105/02">
+<script xtype="x" id="ch0105/02">
   // 02: 财务管理
-  console.log('%c02: 财务管理', 'color: red')
   var sum_balance = 0;
   for (var i = 0; i < 12; i++) {
     do {
@@ -832,9 +789,8 @@
   }
   console.log('$' + (sum_balance / 12).toFixed(2))
 </script>
-<script type="x" id="ch0105/03">
+<script xtype="x" id="ch0105/03">
   // 03: 均值
-  console.log('%c03: 均值', 'color: red')
   var sum = 0;
   var n = Number(prompt('要输入几个数：'))
   while (n < 2) {
@@ -859,16 +815,14 @@
   }
   console.log(sum.toFixed(4));
 </script>
-<script type="x" id="ch0105/04">
+<script xtype="x" id="ch0105/04">
   // 04: 求整数的和与均值
-  console.log('%c04: 求整数的和与均值', 'color: red')
   var sum = 0;
   var n = Number(prompt('要输入几个数：'))
   while (n < 1 || n > 10000) {
     alert('需要1到10000个数')
     n = Number(prompt('要输入几个数：'))
   }
-
   for(var i = 0; i < n; i++) {
     var num = Number(prompt('输入第' + (i + 1) + '个数'))
     while (num % 1 !== 0) {
@@ -879,9 +833,8 @@
   }
   console.log(sum + ' ' + (sum / n).toFixed(5))
 </script>
-<script type="x" id="ch0105/05">
+<script xtype="x" id="ch0105/05">
   // 05:最高的分数
-  console.log('%c05:最高的分数', 'color: red')
   var max = -Infinity
   var n = Number(prompt('参加考试的人数：'))
   while (n < 1 || n > 100) {
@@ -900,9 +853,8 @@
   }
   console.log(max)
 </script>
-<script type="x" id="ch0105/06">
+<script xtype="x" id="ch0105/06">
   // 06:整数序列的元素最大跨度值
-  console.log('%c06:整数序列的元素最大跨度值', 'color: red')
   var max = -Infinity
   var min = Infinity
   var n = Number(prompt('输入的个数：'))
@@ -925,9 +877,8 @@
   }
   console.log(max - min)
 </script>
-<script type="x" id="ch0105/07">
+<script xtype="x" id="ch0105/07">
   //07:奥运奖牌计数
-  console.log('%c07:奥运奖牌计数', 'color: red')
   var n = Number(prompt('输入参与的天数：'))
   var sum_gold = 0
   var sum_silver = 0
@@ -943,9 +894,8 @@
   }
   console.log(sum_gold + ' ' + sum_silver + ' '+ sum_copper + ' ' + (sum_gold + sum_silver + sum_copper))
 </script>
-<script type="x" id="ch0105/08">
+<script xtype="x" id="ch0105/08">
   // 08:多边形内角和
-  console.log('%c08:多边形内角和', 'color: red')
   var remaining_deg = 0 //未知角度数
   var n = Number(prompt('几边形'))
   while (n < 3 || n % 1 !== 0) {
@@ -963,9 +913,8 @@
   }
   console.log(remaining_deg)
 </script>
-<script type="x" id="ch0105/09">
+<script xtype="x" id="ch0105/09">
   // 09:奇数求和
-  console.log('%c09:奇数求和', 'color: red')
   var sum = 0
   var m = Number(prompt('输入m'))
   while (m < 0 || m % 1 !== 0) {
@@ -977,19 +926,16 @@
     alert('输入大于m小于300的正整数')
     n = Number(prompt('输入n'))
   }
-
   if (m % 2 === 0) {
     m++
   }
-
   for(var i = m; i <= n; i += 2) {
     sum += i
   }
   console.log(sum)
 </script>
-<script type="x" id="ch0105/10">
+<script xtype="x" id="ch0105/10">
   // 10:满足条件的数累加
-  console.log('%c10:满足条件的数累加', 'color: red')
   var sum = 0
   var m = Number(prompt('输入m'))
   while (m <= 0 || m % 1 !== 0) {
@@ -1001,7 +947,6 @@
     alert('输入大于m小于300的正整数')
     n = Number(prompt('输入n'))
   }
-
   if(m % 17 !== 0) {
     m = Math.ceil(m / 17) * 17
   }
@@ -1011,9 +956,8 @@
   }
   console.log(sum)
 </script>
-<script type="x" id="ch0105/11">
+<script xtype="x" id="ch0105/11">
   // 11:整数的个数
-  console.log('%c11:整数的个数', 'color: red')
   var one_count = 0
   var five_count = 0
   var ten_count = 0
@@ -1022,7 +966,6 @@
     alert('输入大于1小于100的正整数')
     k = Number(prompt('输入k个数'))
   }
-
   for(var i = 0; i < k; i++) {
     var num = Number(prompt('输入第' + (i + 1) + '个数'))
     while (num < 1 || num > 10) {
@@ -1041,9 +984,8 @@
   console.log(five_count)
   console.log(ten_count)
 </script>
-<script type="x" id="ch0105/12">
+<script xtype="x" id="ch0105/12">
   // 12:与指定数字相同的数的个数
-  console.log('%c12:与指定数字相同的数的个数', 'color: red')
   var m_count = 0
   var N = Number(prompt('输入N'))
   while (N <= 0 || N % 1 !== 0 || N > 100) {
@@ -1055,7 +997,6 @@
     alert('输入大于0的正整数')
     m = Number(prompt('输入m'))
   }
-
   for(var i = 0; i < N; i++) {
     var num = Number(prompt('输入第' + (i + 1) + '个数'))
     while (num % 1 !== 0) {
@@ -1068,9 +1009,8 @@
   }
   console.log(m_count)
 </script>
-<script type="x" id="ch0105/13">
+<script xtype="x" id="ch0105/13">
   // 13:乘方计算
-  console.log('%c13:乘方计算', 'color: red')
   var square = 1
   var a = Number(prompt('输入a'))
   while (a < -1000000 || a > 1000000 || a % 1 !== 0) {
@@ -1082,15 +1022,13 @@
     alert('输入大于2的整数')
     n = Number(prompt('输入n'))
   }
-
   for(var i = 0; i < n; i++) {
     square *= a
   }
   console.log(square)
 </script>
-<script type="x" id="ch0105/14">
+<script xtype="x" id="ch0105/14">
   // 14:人口增长问题
-  console.log('%c14:人口增长问题', 'color: red')
   var x = Number(prompt('输入x'))
   while (x < 1 || x > 100 || x % 1 !== 0) {
     alert('输入大于等于1小于等于100的整数')
@@ -1101,14 +1039,12 @@
     alert('输入大于等于1小于等于100的整数')
     n = Number(prompt('输入n'))
   }
-
   for (var i = 0; i < n; i++) {
     x *= (1 + 0.1 / 100)
   }
   console.log(x.toFixed(4))
 </script>
-<script type="x" id="ch0105/15">
-  console.log('%c15:银行利息', 'color: red')
+<script xtype="x" id="ch0105/15">
   // 15:银行利息
   var R = Number(prompt('输入R'))
   while (R < 0 || R > 20 || R % 1 !== 0) {
@@ -1125,15 +1061,13 @@
     alert('输入0到400之间的整数')
     Y = Number(prompt('输入Y'))
   }
-
   for (var i = 0; i < Y; i++) {
     M = M * (1 + R / 100);
   }
   console.log(Math.floor(M))
 </script>
-<script type="x" id="ch0105/16">
+<script xtype="x" id="ch0105/16">
   // 16:买房子
-  console.log('%c16:买房子', 'color: red')
   var count = 1
   var price = 200
   var sum = 0  //工资和
@@ -1148,7 +1082,6 @@
     alert('输入1到20之间的整数')
     K = Number(prompt('输入K'))
   }
-
   for (var i = 0; i <= 20; i++) {
     if (sum >= price) {
       break;
@@ -1162,10 +1095,8 @@
   } else {
     console.log('Impossible')
   }
-
 </script>
-<script type="x" id="ch0105/17">
-  console.log('%c17:菲波那契数列', 'color: red')
+<script xtype="x" id="ch0105/17">
   // 17:菲波那契数列
   var prev = 1
   var prev_prev = 1
@@ -1174,7 +1105,6 @@
     alert('输入1到46之间的整数')
     k = Number(prompt('输入k'))
   }
-
   for (var i = 3; i < k; i++) {
     var tmp = prev
     prev = prev_prev + prev
@@ -1182,9 +1112,8 @@
   }
   console.log(prev+prev_prev)
 </script>
-<script type="x" id="ch0105/18">
+<script xtype="x" id="ch0105/18">
   // 18:鸡尾酒疗法
-  console.log('%c1.8:鸡尾酒疗法', 'color: red')
   var x = 0 //鸡尾酒疗法有效率
   var n = Number(prompt('输入对照组数目n'))
   while (n <= 1 || n > 20 || n % 1 !== 0) {
@@ -1226,11 +1155,9 @@
       }
     }
   }
-
 </script>
-<script type="x"  id="ch0105/19">
+<script xtype="x"  id="ch0105/19">
   // 19:救援
-  console.log('%c19:救援', 'color: red')
   var minutes = 0   // 总时间  
   var length = 0    // 路程
   var n = Number(prompt('输入屋顶数目n'))
@@ -1263,9 +1190,8 @@
   }
   console.log(Math.ceil(minutes))
 </script>
-<script type="x" id="ch0105/20">
+<script xtype="x" id="ch0105/20">
   // 20:球弹跳高度的计算
-  console.log('%c20:球弹跳高度的计算', 'color: red')
   var distance = 0 // 经过的路程
   var h = Number(prompt('输入初始高度h'))
   while ( h <= 0 || h % 1 !== 0) {
