--- a/miao/noi.html
+++ b/miao/noi.html
@@ -45,7 +45,7 @@
       sum += n
     }
   } 
-  console.log(sum)
+  console.log(Math.floor(sum))
 </script>
 <script xtype="x" id="ch0103/04">
   // 04:带余除法
