--- a/miao/noi.html
+++ b/miao/noi.html
@@ -735,10 +735,10 @@
   if (b * b === 4 * a * c) {
     console.log('x1=x2=' + x1)
   } else if(b * b > 4 * a * c) {
-    console.log('x1=' + x1 + 'x2=' + x2 + ', 其中x1>x2')
+    console.log('x1=' + x1 + 'x2=' + x2 + ';其中x1>x2')
   } else {
     s_delta = Math.sqrt(-delta)
-    console.log('x1=' + ((-b) / (2 * a)).toFixed(5) + '+' + (s_delta / (2 * a)).toFixed(5) + 'i, x2=' + ((-b) / (2 * a)).toFixed(5) + '-' + (s_delta / (2 * a)).toFixed(5) + 'i')
+    console.log('x1=' + ((-b) / (2 * a)).toFixed(5) + '+' + (s_delta / (2 * a)).toFixed(5) + 'i;x2=' + ((-b) / (2 * a)).toFixed(5) + '-' + (s_delta / (2 * a)).toFixed(5) + 'i')
   }
 </script>
 <script xtype="x" id="ch0104/21">
