--- a/miao/noi.html
+++ b/miao/noi.html
@@ -139,6 +139,7 @@
 </script>
 <script xtype="x" id="ch0103/09">
   // 09:与圆相关的计算
+  var pi = 3.14159
   var diameter = 0
   var perimeter = 0
   var area = 0
@@ -148,8 +149,8 @@
     r = Number(prompt('输入圆的半径r '))
   } 
   diameter = 2 * r
-  perimeter = 2 * Math.PI * r
-  area = Math.PI * r * r
+  perimeter = 2 * pi * r
+  area = pi * r * r
   console.log(diameter.toFixed(4) + ' ' + perimeter.toFixed(4) + ' ' + area.toFixed(4))
 </script>
 <script xtype="x" id="ch0103/10">
@@ -327,7 +328,6 @@
   b = Math.sqrt((x1 - x3) * (x1 - x3) + (y1 - y3) * (y1 - y3))
   c = Math.sqrt((x2 - x3) * (x2 - x3) + (y2 - y3) * (y2 - y3))
   s = (a + b + c) / 2
-  console.log(a, b, c)
   area = Math.sqrt(s * (s - a) * (s - b) * (s - c))
   console.log(area.toFixed(2))
 </script>
@@ -783,7 +783,7 @@
     }
     sum_age += age;
   }
-  console.log(sum_age / n).toFixed(2)
+  console.log((sum_age / n).toFixed(2))
 </script>
 <script xtype="x" id="ch0105/02">
   // 02: 财务管理
@@ -813,14 +813,14 @@
       }
     } else {
       var num = Number(prompt('输入第' + (i + 1) + '个数'))
-      while(num % 1 === 0 || Math.abs(num) > 1000) {
+      while(Math.abs(num) > 1000) {
         alert('输入一个绝对值不超过1000的浮点数')
         num = Number(prompt('输入第' + (i + 1) + '个数'))
       }
     }
     sum += num
   }
-  console.log(sum.toFixed(4));
+  console.log((sum / n).toFixed(4));
 </script>
 <script xtype="x" id="ch0105/04">
   // 04: 求整数的和与均值
@@ -957,7 +957,6 @@
   if(m % 17 !== 0) {
     m = Math.ceil(m / 17) * 17
   }
-  console.log(m,n)
   for(var i = m; i <= n; i += 17) {
     sum += i
   }
