--- a/miao/noi.html
+++ b/miao/noi.html
@@ -769,7 +769,7 @@
 </script>
 <script xtype="x" id="ch0105/01">
   // 01：求平均年龄
-  var sum_age = 0;  // 年龄之和
+  var sum_age = 0;
   var n = Number(prompt('输入学生个数:'))
   while (n < 1 || n > 100) {
     alert('学生个数1到100个')
