--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1214,4 +1214,20 @@
   }
   console.log(distance)
   console.log(h)
+  var distance = 0 // 经过的路程
+  var h = Number(prompt('输入初始高度h'))
+  while ( h <= 0 || h % 1 !== 0) {
+    alert('输入一个正整数')
+    h = Number(prompt('输入初始高度h'))
+  }
+  for (var i = 0; i < 10; i++) {
+    if(i === 0) {
+      distance += h
+    } else {
+      distance += h * 2
+    }
+    h /= 2
+  }
+  console.log(distance.toFixed(4))
+  console.log(h.toFixed(7))
 </script>
