--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1214,7 +1214,7 @@
   }
   console.log(distance)
   console.log(h)
-  var distance = 0 // 经过的路程
+  var distance = 0
   var h = Number(prompt('输入初始高度h'))
   while ( h <= 0 || h % 1 !== 0) {
     alert('输入一个正整数')
