--- a/miao/noi.html
+++ b/miao/noi.html
@@ -503,13 +503,13 @@
     str += 3
   }
   if (n % 5 === 0) {
-    if (str.lenght > 0) {
+    if (str.length > 0) {
       str += ' '
     }
     str += 5
   }
   if (n % 7 === 0) {
-    if (str.lenght > 0) {
+    if (str.length > 0) {
       str += ' '
     }
     str += 7
@@ -671,6 +671,7 @@
   // 18:点和正方形的关系
   var key = 'yes'
   for (var i = 0; i < 2; i++) {
+    var str = i ? 'y' : 'x'
     var n = Number(prompt('输入坐标' + str))
     while (isNaN(n)) {
       alert('输入一个数')
