--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1227,7 +1227,6 @@
   if (sum === Number(a)) {
     console.log('YES')
   }
-
 </script>
 <script id="narcissistics" sample-input="" sample-output="" comment="找出100到10000以内所有的水仙花数">
   for (var i = 100; i < 10000; i++) {
@@ -1254,6 +1253,7 @@
       break
     }
   }
+  key = key : 'YES' : 'NO'
   console.log(key)
 </script>
 <script id="weekday" sample-input="2018 6" sample-output="5" comment="输入年份与月份，给出该年该月的第一天是星期几">
