--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1253,7 +1253,7 @@
       break
     }
   }
-  key = key : 'YES' : 'NO'
+  key = key ? 'YES' : 'NO'
   console.log(key)
 </script>
 <script id="weekday" sample-input="2018 6" sample-output="5" comment="输入年份与月份，给出该年该月的第一天是星期几">
