--- a/miao/paint.html
+++ b/miao/paint.html
@@ -82,7 +82,7 @@
 
   // 画一个正弦曲线
   for (var i = 0; i < 400; i += 0.01) {
-    var y = Math.sin(i) * 25
+    var y = Math.sin(i) * 25 + 150
     dot(i * 25, y)
   }
 </script>
